--- a/goblins/Auswertung_07/index.html
+++ b/goblins/Auswertung_07/index.html
@@ -3,13 +3,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Eleventy Blog</title>
 
-  <link rel="stylesheet" href="/css/site.css">
+  <link rel="stylesheet" href="/tutorials/css/site.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&amp;display=fallback" rel="stylesheet">
 </head>
 <body>
 <header>
-  <a href="/" class="link--home">My Blog</a>
-  <a href="/About" class="link--about">About</a>
+  <a href="/tutorials/" class="link--home">My Blog</a>
+  <a href="/tutorials/About" class="link--about">About</a>
 </header>
 <main>
   <article>
