deploy: f26c9e3b8d3ff0b0158cd13d6af701e041aeeb70

--- a/goblins/Auswertung_03/index.html
+++ b/goblins/Auswertung_03/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Eleventy Blog</title>
+  <title>Eressea Beispielpartie</title>
 
   <link rel="stylesheet" href="/tutorials/css/site.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&amp;display=fallback" rel="stylesheet">
+  <!-- link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&display=fallback" rel="stylesheet" -->
 </head>
 <body>
 <header>
-  <a href="/tutorials/" class="link--home">My Blog</a>
+  <a href="/tutorials/" class="link--home">Beispielpartie</a>
   <a href="/tutorials/About" class="link--about">About</a>
 </header>
 <main>
@@ -168,6 +168,7 @@ LERNE AUTO Pferdedressur
 
 </article>
 </main>
-<footer>© My Blog</footer>
+<footer>© Eressea PBEM</footer>
+
 
 </body></html>
