--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Eleventy Blog</title>
+  <title>Eressea Beispielpartie</title>
 
   <link rel="stylesheet" href="/tutorials/css/site.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&display=fallback" rel="stylesheet">
+  <!-- link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto&display=fallback" rel="stylesheet" -->
 </head>
 <body>
 <header>
-  <a href="/tutorials/" class="link--home">My Blog</a>
+  <a href="/tutorials/" class="link--home">Beispielpartie</a>
   <a href="/tutorials/About" class="link--about">About</a>
 </header>
 <main>
@@ -25,6 +25,6 @@
 
 
 </main>
-<footer>&copy; My Blog</footer>
+<footer>&copy; Eressea PBEM</footer>
 </body>
 </html>
