--- a/goblins/Auswertung_07/index.html
+++ b/goblins/Auswertung_07/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <a href="/tutorials/" class="link--home">Beispielpartie</a>
-  <a href="/tutorials/About" class="link--about">About</a>
+  <a href=".." class="link--up">Up</a>
 </header>
 <main>
   <article>
