deploy: 5261bcd34558d7244348b7b65148a2dcbf030a15

--- a/index.html
+++ b/index.html
@@ -11,18 +11,27 @@
 <body>
 <header>
   <a href="/tutorials/" class="link--home">Beispielpartie</a>
-  <a href="/tutorials/About" class="link--about">About</a>
+  <a href=".." class="link--up">Up</a>
 </header>
 <main>
   
-  <article>
-
+<article>
     <h1>
-      <a href="/tutorials/goblins/"></a>
+      <a href="goblins">Goblins</a>
     </h1>
+</article>
 
-  </article>
+<article>
+    <h1>
+      <a href="aquarians">Meermenschen</a>
+    </h1>
+</article>
 
+<article>
+    <h1>
+      <a href="dwarves">Zwerge</a>
+    </h1>
+</article>
 
 </main>
 <footer>&copy; Eressea PBEM</footer>
