deploy: bd16fd3cc93828fe1ae424cf82164e405ba06d87

--- a/aquarians/aqua_turn_4/index.html
+++ b/aquarians/aqua_turn_4/index.html
@@ -31,7 +31,7 @@ Let's take advantage of having 2 entertainers on board to save time: let's make 
 The boat will continue its exploration in coastal mode, but let's not forget to give 10 silvers to the swimmer/ambassador!</p>
 <h3>Swimming</h3>
 <p>A unique powerful ability. An aquarian can leave a coastal ship and move to an adjacent land region. The same rules as land movement apply. For more details, consult the wiki.
-https://wiki.eressea.de/Schiffsreise/en#Anschwimmen
+https://wiki.eressea.de/Schiffsreise/en#Anschwimmen<br>
 <em>However, it's impossible to go from land to water</em></p>
 <h2>Sygirfal</h2>
 <p>We have 380 silvers in our region.<br>
@@ -49,12 +49,13 @@ We're going to hug the western coast.</li>
 <li>1 taming to make horses</li>
 <li>1 riding to explore the island and later for transport.</li>
 <li>We start 1 new boat and train the future captain.</li>
-<li>Everyone who can brings back money.<br>
-The new mage who reached level 2 only gained 1 Aura point, so he cannot cast a spell at level 2. The other one with 3 points can.<br>
+<li>Everyone who can brings back money.</li>
+</ul>
+<h3>Mages</h3>
+<p>The new mage who reached level 2 only gained 1 Aura point, so he cannot cast a spell at level 2. The other one with 3 points can.<br>
 The toad cannot learn. So we give him the order to work. Moreover we give his "pot of toadslime" to another unit so the mage won't be easily identifiable.<br>
 The toad will become a mage again in a few turns.<br>
-<em>Good to know: Seen from outside, other factions don't see "pot of toadslime", but a potion.</em></li>
-</ul>
+<em>Good to know: Seen from outside, other factions don't see "pot of toadslime", but a potion.</em></p>
 
 </article>
 </main>
