--- a/aquarians/introduction/index.html
+++ b/aquarians/introduction/index.html
@@ -27,15 +27,25 @@
 <p>So either the Aquarian puts all their energy into making combatants (first a front line of spearmen and cavalry to protect the mages, then a second line), or they navigate and create a large economy.</p>
 <p>Their special ability in navigation won't really be used if they opt for survival through weapons, so you might as well play a human who has fewer penalties.</p>
 <p>If you choose to map, then there's not a twig of wood to put into weapons, at least at the beginning.</p>
-<p>In any case, ultimately, the Aquarian's survival lies more in their ability to settle on other islands, quickly establish contacts and find alliances. Proving their clear superiority in cartography can allow them to position themselves as indispensable to their neighbors. They must not give away their maps - it's their currency of survival.</p>
+<p>In any case, ultimately, the Aquarian's survival lies more in their ability to settle on other islands, quickly establish contacts and find alliances. Proving their clear superiority in world exploration can allow them to position themselves as indispensable to their neighbors. They must not give away their maps and their contacts - it's their currency of survival.</p>
+<p><strong>Magic</strong></p>
+<p>Magic is powerful in the world of Eressea.</p>
 <p>They have no penalty in magic, and the choice of their school is important. It will determine their ability to defend themselves quickly or their usefulness in an alliance long-term.</p>
 <p>The Gwyrrd school gives navigation advantages from level 4 and provides combat spells at level 3 (between 3 and 9 turns of Learn).</p>
 <p>The Draig school offers a combat spell from level 2.</p>
 <p>Read the spells of the different schools carefully and make your choice, but Gwyrrd is a choice you'll never regret as an Aquarian.</p>
+<p><strong>The Concept</strong></p>
 <p>Here I will present the development of an Aquarian faction focused on exploration, trade, communication and intelligence.</p>
 <p>The idea will be to quickly create an economy through entertainment, train mages who will also contribute to the economy but also to defense, and send the maximum number of boats toward the unknown.</p>
-<p>This is a very risky starting gamble as it will depend on your neighbors and their ability to project into the future and know how to trust.</p>
+<p>This is a risky starting gamble as it will depend on</p>
+<ul>
+<li>your neighbors and their ability to project into the future and place trust.</li>
+<li>your ability to discover new islands and settle there.</li>
+</ul>
 <p>But at least it will allow you to have fun and meet many players!</p>
+<p>Important note: Players never view favorably a neighbor who doesn't communicate. They quickly consider such a player an enemy.
+To succeed, you'll need to dedicate time to messages exchanged with other players. You'll need to work on establishing a relationship of trust without squandering your information.
+So if you don't have enough time to dedicate to this, move on, or play the sedentary and directly dangerous Aquarian.</p>
 <p>For a more warrior/defense start, take inspiration from the human start with a few exceptions, and add a touch of navigation.</p>
 <p><em>I'll skip the technical details, the WIKI answers your questions, otherwise the Goblin's tutorial is a model of its kind.</em></p>
 
