deploy: 0d8fa887516ee15a56a2f738a40053a6b58732db

--- a/aquarians/diplomatie_1_9/index.html
+++ b/aquarians/diplomatie_1_9/index.html
@@ -18,8 +18,8 @@
   <h1>DIPLOMACY LOG</h1>
 <h2>TURN 5</h2>
 <h3>Halbe Linge</h3>
-<p><strong>They wrote to us first!</strong></p>
-<hr>
+<h2><strong>They wrote to us first!</strong>
+Personally, I always prefer to be the first to establish contact. You keep an advantage in exchanges, by leading rather than being on the receiving end.</h2>
 <p><strong>From Halbe Linge:</strong></p>
 <pre><code>Grüße an die Baba O Rhum.
 Willkommen in Vesolsinmul. Wir sind Halbe Linge, ich bin die Anführerin Ling.
