deploy: dd8a4b2c74c2297722700b2d0fc224c20f09c551

--- a/aquarians/introduction/index.html
+++ b/aquarians/introduction/index.html
@@ -26,8 +26,9 @@
 <p>The Aquarian has a mining penalty (-2), so they have no choice at the beginning but to use wood, wood that is also essential for boats.</p>
 <p>So either the Aquarian puts all their energy into making combatants (first a front line of spearmen and cavalry to protect the mages, then a second line), or they navigate and create a large economy.</p>
 <p>Their special ability in navigation won't really be used if they opt for survival through weapons, so you might as well play a human who has fewer penalties.</p>
-<p>If you choose to map, then there's not a twig of wood to put into weapons, at least at the beginning.</p>
-<p>In any case, ultimately, the Aquarian's survival lies more in their ability to settle on other islands, quickly establish contacts and find alliances. Proving their clear superiority in world exploration can allow them to position themselves as indispensable to their neighbors. They must not give away their maps and their contacts - it's their currency of survival.</p>
+<p>If you choose to explore, then there's not a twig of wood to put into weapons, at least at the beginning.</p>
+<p>In any case, ultimately, the Aquarian's survival lies more in their ability to settle on other islands, quickly establish contacts and find alliances. Proving their clear superiority in world exploration can allow them to position themselves as indispensable to their neighbors.<br>
+They must not give away their maps and their contacts - it's their currency of survival.</p>
 <p><strong>Magic</strong></p>
 <p>Magic is powerful in the world of Eressea.</p>
 <p>They have no penalty in magic, and the choice of their school is important. It will determine their ability to defend themselves quickly or their usefulness in an alliance long-term.</p>
@@ -43,8 +44,8 @@
 <li>your ability to discover new islands and settle there.</li>
 </ul>
 <p>But at least it will allow you to have fun and meet many players!</p>
-<p>Important note: Players never view favorably a neighbor who doesn't communicate. They quickly consider such a player an enemy.
-To succeed, you'll need to dedicate time to messages exchanged with other players. You'll need to work on establishing a relationship of trust without squandering your information.
+<p><strong>Important note</strong>: Players never view favorably a neighbor who doesn't communicate. They quickly consider such a player an enemy.<br>
+To succeed, you'll need to dedicate time to messages exchanged with other players. You'll need to work on establishing a relationship of trust without squandering your information.<br>
 So if you don't have enough time to dedicate to this, move on, or play the sedentary and directly dangerous Aquarian.</p>
 <p>For a more warrior/defense start, take inspiration from the human start with a few exceptions, and add a touch of navigation.</p>
 <p><em>I'll skip the technical details, the WIKI answers your questions, otherwise the Goblin's tutorial is a model of its kind.</em></p>
