--- a/aquarians/diplomatie_1_9/index.html
+++ b/aquarians/diplomatie_1_9/index.html
@@ -19,7 +19,7 @@
 <h2>TURN 5</h2>
 <p>Here the exchanges with other peoples are recorded. They're organized by turn and by faction.</p>
 <h3>Halbe Linge</h3>
-<h2><strong>They wrote to us first!</strong>
+<h2><strong>They wrote to us first!</strong><br>
 Personally, I always prefer to be the first to establish contact. You keep an advantage in exchanges, by leading rather than being on the receiving end.</h2>
 <p><strong>From Halbe Linge:</strong></p>
 <pre><code>Grüße an die Baba O Rhum.
