deploy: 4b52d304ab775fa310471e5a05670ae08112eeb5

--- a/aquarians/diplomatie_1_9/index.html
+++ b/aquarians/diplomatie_1_9/index.html
@@ -19,8 +19,10 @@
 <h2>TURN 5</h2>
 <p>Here the exchanges with other peoples are recorded. They're organized by turn and by faction.</p>
 <h3>Halbe Linge</h3>
+<hr>
 <p><strong>They wrote to us first!</strong></p>
-<h2>Personally, I always prefer to be the first to establish contact. You keep an advantage in exchanges, by leading rather than being on the receiving end.</h2>
+<p>Personally, I always prefer to be the first to establish contact. You keep an advantage in exchanges, by leading rather than being on the receiving end.</p>
+<hr>
 <p><strong>From Halbe Linge:</strong></p>
 <pre><code>Grüße an die Baba O Rhum.
 Willkommen in Vesolsinmul. Wir sind Halbe Linge, ich bin die Anführerin Ling.
