--- a/aquarians/diplomatie_1_9/index.html
+++ b/aquarians/diplomatie_1_9/index.html
@@ -236,8 +236,6 @@ Zimrida, Pferdemensch und Großer Landvermesser
 <h3>CRISIS: Threat Message</h3>
 <p><strong>No response but 2 days later I received a threat message!</strong></p>
 <hr>
-<h2>The whole turn is devoted to attempting to resolve the crisis with the eastern islanders.
-Trolle and Ling.</h2>
 <p><strong>From Halbe Linge, copied to Trolle, einige Steine tragend and Schnurrender Haufen Glück:</strong></p>
 <pre><code>Subject: Moving through our Lands cloaked
 
@@ -263,14 +261,14 @@ Ling
 <pre><code>Bonjour Ling,
 
 Nous sommes désolé de ne pas avoir répondu à votre message plus tôt
-mais les messagers sont rares actuellement.
+mes les messagers sont rares actuellement.
 
 Nous ne nous cachons pas de vous. Notre cavalier, Zimrida (hha6),
 n'est pas déguisé et ne se cache nullement. Nous n'avons pas d'autres
 ressortissants ailleurs en votre présence.
 
 Je pensais que votre proposition de dons de produits de luxe était une
-invitation à venir dans votre belle region et j'ai donc dompté quelques
+inviation à venir dans votre belle region et j'ai donc dompté quelques
 chevaux pour y répondre et me mettre à votre disposition.
 
 Il convient donc à votre guise de définir nos possibles relations futures.
@@ -386,10 +384,6 @@ Ling
 <p><strong>Assessment:</strong> They seem to have made an error... Let's remain on guard however.</p>
 <hr>
 <h2>TURN 9</h2>
-<hr>
-<h2>Through the following messages I try to work things out and strengthen relations with the WTC.
-Theodor, Cat tribe and Ling.
-On the other island, I met a dwarf, Odins Hammer, and a demon, Apostel Belars.</h2>
 <h3>My Response to Ling</h3>
 <p><strong>French:</strong></p>
 <pre><code>Greetings Maître Ling !
@@ -547,8 +541,7 @@ Mit Respekt und Freundschaft
 Zimrida, Pferdemensch und Großer Landvermesser
 </code></pre>
 <hr>
-<h3>Odins Hammer</h3>
-<h4>Encounter with Dwarf Tribe - Northern Island, Odins Hammer</h4>
+<h3>Encounter with Dwarf Tribe - Northern Island, Odins Hammer</h3>
 <p><strong>Our Message:</strong></p>
 <p><strong>French:</strong></p>
 <pre><code>Salutations, Baumfreund, membre de la tribu des Odins Hammer !
@@ -783,8 +776,7 @@ I can be on **Gogan Ror** in 2 weeks but it seems riskier.
 **Friendship and respect!**
 </code></pre>
 <hr>
-<h3>Apostel Belars</h3>
-<h4>Message 3 - Premier contact avec les Apostel Belars</h4>
+<h3>Message 3 - Premier contact avec les Apostel Belars</h3>
 <hr>
 <h4>Version française</h4>
 <pre><code>Salutations, Ô Serviteurs de Belar !
