--- a/aquarians/introduction/index.html
+++ b/aquarians/introduction/index.html
@@ -31,7 +31,7 @@
 They must not give away their maps and their contacts - it's their currency of survival.</p>
 <p><strong>Magic</strong></p>
 <p>Magic is powerful in the world of Eressea.</p>
-<p>Aquarians have no penalty in magic, and the choice of their school is important. It will determine their ability to defend themselves quickly or their usefulness in an alliance long-term.</p>
+<p>They have no penalty in magic, and the choice of their school is important. It will determine their ability to defend themselves quickly or their usefulness in an alliance long-term.</p>
 <p>The Gwyrrd school gives navigation advantages from level 4 and provides combat spells at level 3 (between 3 and 9 turns of Learn).</p>
 <p>The Draig school offers a combat spell from level 2.</p>
 <p>Read the spells of the different schools carefully and make your choice, but Gwyrrd is a choice you'll never regret as an Aquarian.</p>
