deploy: 561721b43c519e48545325c6bb5c38508576aa9c

--- a/aquarians/aqua_turn_8/index.html
+++ b/aquarians/aqua_turn_8/index.html
@@ -29,8 +29,9 @@ Eressea is divided into multiple zones, commonly referred to as worlds.<br>
 These zones are separated by borders.<br>
 "Firewalls" typically serve as borders.<br>
 Firewalls can't be crossed.</p>
-<h2>Topares: meeting 2 neighbors, "Halbe Linge" and "Trolle, einige Steine tragend".</h2>
-<p>Both could work together.
+<h2>Topares:</h2>
+<p>Meeting 2 neighbors, "Halbe Linge" and "Trolle, einige Steine tragend".
+Both could work together.
 Sending a message to the troll. Interesting partner for an Aquarian (mining, quarrying, construction and solid front line)!</p>
 <h2>Actions</h2>
 <p>Zimrida (hha6) continues towards Vesolsinmul.
